@@ -13,7 +13,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.ArrayList;
+import java.util.Arrays;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
@@ -37,10 +38,10 @@ public class ValidateRefIT {
 		var ref = new Ref();
 		ref.setUrl(URL);
 		ref.setTitle("First");
-		ref.setTags(List.of("+user/tester"));
+		ref.setTags(Arrays.asList("+user/tester"));
 		refRepository.save(ref);
 
-		validate.ref(ref, false);
+		validate.ref("", ref, false);
 	}
 
 	@Test
@@ -59,9 +60,35 @@ public class ValidateRefIT {
 		var ref = new Ref();
 		ref.setUrl(URL);
 		ref.setTitle("First");
-		ref.setTags(List.of("+user/tester", "plugin/test"));
+		ref.setTags(Arrays.asList("+user/tester", "plugin/test"));
 
-		assertThatThrownBy(() -> validate.ref(ref, false))
+		assertThatThrownBy(() -> validate.ref("", ref, false))
+			.isInstanceOf(InvalidPluginException.class);
+	}
+
+	@Test
+	void testValidateRefWithInvalidPluginDefaults() throws IOException {
+		var plugin = new Plugin();
+		plugin.setTag("plugin/test");
+		var mapper = new ObjectMapper();
+		plugin.setSchema((ObjectNode) mapper.readTree("""
+		{
+			"properties": {
+				"name": { "type": "string" },
+				"age": { "type": "uint32" }
+			}
+		}"""));
+		plugin.setDefaults((ObjectNode) mapper.readTree("""
+		{
+			"invalid": "defaults"
+		}"""));
+		pluginRepository.save(plugin);
+		var ref = new Ref();
+		ref.setUrl(URL);
+		ref.setTitle("First");
+		ref.setTags(Arrays.asList("+user/tester", "plugin/test"));
+
+		assertThatThrownBy(() -> validate.ref("", ref, false))
 			.isInstanceOf(InvalidPluginException.class);
 	}
 
@@ -81,7 +108,7 @@ public class ValidateRefIT {
 		var ref = new Ref();
 		ref.setUrl(URL);
 		ref.setTitle("First");
-		ref.setTags(List.of("+user/tester", "plugin/test"));
+		ref.setTags(new ArrayList<>(Arrays.asList("+user/tester", "plugin/test")));
 		ref.setPlugins((ObjectNode) mapper.readTree("""
 		{
 			"plugin/test": {
@@ -90,7 +117,112 @@ public class ValidateRefIT {
 			}
 		}"""));
 
-		validate.ref(ref, false);
+		validate.ref("", ref, false);
+	}
+
+	@Test
+	void testValidateRefWithOptionalPlugin() throws IOException {
+		var mapper = new ObjectMapper();
+		var plugin = new Plugin();
+		plugin.setTag("plugin/test");
+		plugin.setSchema((ObjectNode) mapper.readTree("""
+		{
+			"optionalProperties": {
+				"name": { "type": "string" },
+				"age": { "type": "uint32" }
+			}
+		}"""));
+		pluginRepository.save(plugin);
+		var ref = new Ref();
+		ref.setUrl(URL);
+		ref.setTitle("First");
+		ref.setTags(new ArrayList<>(Arrays.asList("+user/tester", "plugin/test")));
+
+		validate.ref("", ref, false);
+	}
+
+	@Test
+	void testValidateRefWithStringPlugin() throws IOException {
+		var plugin = new Plugin();
+		plugin.setTag("plugin/test");
+		var mapper = new ObjectMapper();
+		plugin.setSchema((ObjectNode) mapper.readTree("""
+			{ "type": "string" },
+		"""));
+		pluginRepository.save(plugin);
+		var ref = new Ref();
+		ref.setUrl(URL);
+		ref.setTitle("First");
+		ref.setTags(Arrays.asList("+user/tester", "plugin/test"));
+		ref.setPlugins((ObjectNode) mapper.readTree("""
+		{
+			"plugin/test": "test"
+		}"""));
+
+		validate.ref("", ref, false);
+	}
+
+	@Test
+	void testValidateRefWithBooleanPlugin() throws IOException {
+		var plugin = new Plugin();
+		plugin.setTag("plugin/test");
+		var mapper = new ObjectMapper();
+		plugin.setSchema((ObjectNode) mapper.readTree("""
+			{ "type": "boolean" },
+		"""));
+		pluginRepository.save(plugin);
+		var ref = new Ref();
+		ref.setUrl(URL);
+		ref.setTitle("First");
+		ref.setTags(Arrays.asList("+user/tester", "plugin/test"));
+		ref.setPlugins((ObjectNode) mapper.readTree("""
+		{
+			"plugin/test": true
+		}"""));
+
+		validate.ref("", ref, false);
+	}
+
+	@Test
+	void testValidateRefWithNumberPlugin() throws IOException {
+		var plugin = new Plugin();
+		plugin.setTag("plugin/test");
+		var mapper = new ObjectMapper();
+		plugin.setSchema((ObjectNode) mapper.readTree("""
+			{ "type": "uint32" },
+		"""));
+		pluginRepository.save(plugin);
+		var ref = new Ref();
+		ref.setUrl(URL);
+		ref.setTitle("First");
+		ref.setTags(Arrays.asList("+user/tester", "plugin/test"));
+		ref.setPlugins((ObjectNode) mapper.readTree("""
+		{
+			"plugin/test": 100
+		}"""));
+
+		validate.ref("", ref, false);
+	}
+
+	@Test
+	void testValidateRefWithArrayPlugin() throws IOException {
+		var plugin = new Plugin();
+		plugin.setTag("plugin/test");
+		var mapper = new ObjectMapper();
+		plugin.setSchema((ObjectNode) mapper.readTree("""
+			{ "elements": { "type": "string" } },
+		"""));
+		pluginRepository.save(plugin);
+		var ref = new Ref();
+		ref.setUrl(URL);
+		ref.setTitle("First");
+		ref.setTags(Arrays.asList("+user/tester", "plugin/test"));
+		ref.setPlugins((ObjectNode) mapper.readTree("""
+		{
+			"plugin/test": ["test", "works"]
+		}"""));
+
+		validate.ref("", ref, false);
 	}
 
 	@Test
@@ -109,7 +241,7 @@ public class ValidateRefIT {
 		var ref = new Ref();
 		ref.setUrl(URL);
 		ref.setTitle("First");
-		ref.setTags(List.of("+user/tester", "plugin/test"));
+		ref.setTags(Arrays.asList("+user/tester", "plugin/test"));
 		ref.setPlugins((ObjectNode) mapper.readTree("""
 		{
 			"plugin/test": {
@@ -121,8 +253,7 @@ public class ValidateRefIT {
 			}
 		}"""));
 
-
-		assertThatThrownBy(() -> validate.ref(ref, false))
+		assertThatThrownBy(() -> validate.ref("", ref, false))
 			.isInstanceOf(InvalidPluginException.class);
 	}
 
@@ -135,7 +266,7 @@ public class ValidateRefIT {
 		var ref = new Ref();
 		ref.setUrl(URL);
 		ref.setTitle("First");
-		ref.setTags(List.of("+user/tester", "plugin/test"));
+		ref.setTags(Arrays.asList("+user/tester", "plugin/test"));
 		ref.setPlugins((ObjectNode) mapper.readTree("""
 		{
 			"plugin/test": {
@@ -144,7 +275,7 @@ public class ValidateRefIT {
 			}
 		}"""));
 
-		assertThatThrownBy(() -> validate.ref(ref, false))
+		assertThatThrownBy(() -> validate.ref("", ref, false))
 			.isInstanceOf(InvalidPluginException.class);
 	}
 
@@ -153,7 +284,7 @@ public class ValidateRefIT {
 		var plugin = new Plugin();
 		plugin.setTag("plugin/test");
 		var mapper = new ObjectMapper();
-		plugin.setDefaults(mapper.readTree("""
+		plugin.setDefaults((ObjectNode) mapper.readTree("""
 		{
 			"name": "Alice",
 			"age": 100
@@ -169,8 +300,8 @@ public class ValidateRefIT {
 		var ref = new Ref();
 		ref.setUrl(URL);
 		ref.setTitle("First");
-		ref.setTags(List.of("+user/tester", "plugin/test"));
+		ref.setTags(Arrays.asList("+user/tester", "plugin/test"));
 
-		validate.ref(ref, false);
+		validate.ref("", ref, false);
 	}
 }
